Work on testing pipeline (#5)
* Work on testing pipeline

* troubleshooting provenance generation

* Add testing workflow

* make conda (and mamba?) available when running the pipeline

* fix home dir path

* add another sample to simulate, this one directly from FluViewer db

* Add another sample to simulate from FluViewer db

* Build multi-segment ref to simulate reads from

* touching up provenance

* tidying up

* rename snp_calling module

* typo geoflu -> genoflu

* small fixes

* Disable nextflow v23 test temporarily

* Restore fluviewer conda env directive

* updates

* organize environments

* fix sed cmd

* fix env path

* updates

* update

* collect nextflow log

* collect nextflow log

* tidy up nextclade provenance

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,16 @@
+.github/data/assemblies
+.github/data/fastq
+.github/data/fluviewer_db
 .nextflow*
 work
-test*
+test_input
+test_output
 test_data/
+./test*
 ref/
 input_test/
 output_test/
 Validation_notes.md
 .Rproj.user
-__pycache__/
+*/__pycache__/*.pyc
 assets/genoflu/GenoFLU
