--- a/environments/fluviewer.yml
+++ b/environments/fluviewer.yml
@@ -1,4 +1,4 @@
-name: FluViewer
+name: fluviewer-nf-FluViewer
 channels:
   - conda-forge
   - bioconda
@@ -209,4 +209,4 @@ dependencies:
   - zlib=1.2.13=hd590300_5
   - zstd=1.5.5=hfc55251_0
   - pip:
-      - fluviewer
+      - FluViewer==0.1.11
