--- a/nextflow.config
+++ b/nextflow.config
@@ -1,39 +1,39 @@
 manifest {
   author = 'James Zlosnik (nextflow pipeline)/Kevin Kuchinski (FluViewer)'
-  name = 'BCCDC-PHL/FluViewer-nf'
-  version = '0.2.0'
+  name = 'BCCDC-PHL/fluviewer-nf'
+  version = '0.2.2'
   description = 'BCCDC-PHL FluViewer'
   mainScript = 'main.nf'
   nextflowVersion = '>=20.01.0'
 }
 
 params {
-  profile = false
-  cache = ''
-  outdir = 'results'
-  fastq_input = ''
-  illumina_suffixes = ['*_R{1,2}_001', '*_R{1,2}', '*_{1,2}' ]
-  fastq_exts = ['.fastq.gz', '.fq.gz', '.fastq', '.fq']
-  fastq_search_path = makeFastqSearchPath( illumina_suffixes, fastq_exts )
-  primer_path = "${baseDir}/assets/"
-  primers = "${baseDir}/assets/primers.fa"
-  rev_primers = "${baseDir}/assets/primers_rev_comp.fa"
-  pipeline_short_name = parsePipelineName(manifest.toMap().get('name'))
-  pipeline_minor_version = parseMinorVersion(manifest.toMap().get('version'))
-  run_name = parseRunName( fastq_input )
-  versioned_outdir = ''
-  min_depth = '10'
-  min_q = '30'
-  min_cov = '25'
-  min_ident = '95'
-  keep_interfiles = false
-  h1_dataset = ''
-  h3_dataset = ''
-  h5_dataset = ''
-  blastx_subtype_db = "${projectDir}/assets/blastx/blastx_subtype_db.fasta"
-  genoflu_cache = "${projectDir}/assets/genoflu"
-  genoflu_github_url = 'https://github.com/USDA-VS/GenoFLU/'
-  genoflu_version = "LATEST"
+    profile = false
+    cache = ''
+    outdir = 'results'
+    fastq_input = ''
+    illumina_suffixes = ['*_R{1,2}_001', '*_R{1,2}', '*_{1,2}' ]
+    fastq_exts = ['.fastq.gz', '.fq.gz', '.fastq', '.fq']
+    fastq_search_path = makeFastqSearchPath( illumina_suffixes, fastq_exts )
+    primer_path = "${baseDir}/assets/"
+    primers = "${baseDir}/assets/primers.fa"
+    rev_primers = "${baseDir}/assets/primers_rev_comp.fa"
+    pipeline_short_name = parsePipelineName(manifest.toMap().get('name'))
+    pipeline_minor_version = parseMinorVersion(manifest.toMap().get('version'))
+    run_name = parseRunName( fastq_input )
+    min_depth = '10'
+    min_q = '30'
+    min_cov = '25'
+    min_ident = '95'
+    keep_interfiles = false
+    h1_dataset = ''
+    h3_dataset = ''
+    h5_dataset = ''
+    db = 'NO_FILE'
+    blastx_subtype_db = "${projectDir}/assets/blastx/blastx_subtype_db.fasta"
+    genoflu_cache = "${projectDir}/assets/genoflu"
+    genoflu_github_url = 'https://github.com/USDA-VS/GenoFLU/'
+    genoflu_version = "LATEST"
 }
 
 def makeFastqSearchPath ( illumina_suffixes, fastq_exts ) {
@@ -67,29 +67,30 @@ def parsePipelineName(name) {
 }
 
 profiles {
-  conda {
-    process.conda = "$baseDir/environments/main.yml"
-    if (params.cache) {
-      conda.cacheDir = params.cache
+    conda {
+	conda.enabled = true
+	process.conda = "$baseDir/environments/environment.yml"
+	if (params.cache) {
+	    conda.cacheDir = params.cache
+	}
+	conda.useMamba = true
     }
-    conda.useMamba = true
-  }
 }
 
 process {
-  withName: FluViewer {
-    cpus = 8
-    memory = '32 GB'
-  }
+    withName: fluviewer {
+	conda = "$baseDir/environments/fluviewer.yml"
+	cpus = 8
+    }
 
-  withName: cutadapt {
-    cpus = 8
-  }
+    withName: cutadapt {
+	cpus = 8
+    }
 
-  withName: CLADE_CALLING {
-    conda = "$baseDir/environments/nextclade.yml"
-    cpus = 4
-  }
+    withName: clade_calling {
+	conda = "$baseDir/environments/nextclade.yml"
+	cpus = 4
+    }
 }
 
 report {
@@ -98,11 +99,11 @@ report {
 }
 
 timeline {
-	enabled = true
-	file = "${params.outdir}/${params.run_name}/${params.pipeline_short_name}-v${params.pipeline_minor_version}/${params.run_name}_timeline.html"
+    enabled = true
+    file = "${params.outdir}/${params.run_name}/${params.pipeline_short_name}-v${params.pipeline_minor_version}/${params.run_name}_timeline.html"
 }
 
 trace {
-  enabled = true
-  file = "${params.outdir}/${params.run_name}/${params.pipeline_short_name}-v${params.pipeline_minor_version}/${params.run_name}_trace.txt"
+    enabled = true
+    file = "${params.outdir}/${params.run_name}/${params.pipeline_short_name}-v${params.pipeline_minor_version}/${params.run_name}_trace.txt"
 }
