changed outdir schema for all processes (#11)
* changed outdir schema for all processes

* changed provenance collection to be per-sample

* made report, timeline, and trace filenames more specific

---------

Co-authored-by: John Palmer <john.palmer@bccdc.ca>

--- a/nextflow.config
+++ b/nextflow.config
@@ -95,15 +95,15 @@ process {
 
 report {
     enabled = true
-    file = "${params.outdir}/${params.run_name}/${params.pipeline_short_name}-v${params.pipeline_minor_version}/${params.run_name}_report.html"
+    file = "${params.outdir}/${params.run_name}_fluviewer-nf_nextflow_report.html"
 }
 
 timeline {
     enabled = true
-    file = "${params.outdir}/${params.run_name}/${params.pipeline_short_name}-v${params.pipeline_minor_version}/${params.run_name}_timeline.html"
+    file = "${params.outdir}/${params.run_name}_fluviewer-nf_nextflow_timeline.html"
 }
 
 trace {
     enabled = true
-    file = "${params.outdir}/${params.run_name}/${params.pipeline_short_name}-v${params.pipeline_minor_version}/${params.run_name}_trace.txt"
+    file = "${params.outdir}/${params.run_name}_fluviewer-nf_nextflow_trace.txt"
 }
