--- a/environments/fluviewer.yml
+++ b/environments/fluviewer.yml
@@ -14,5 +14,6 @@ dependencies:
   - freebayes=1.3.6
   - pandas=2.0.3
   - seaborn=0.12.2
+  - pip=24.0
   - pip:
     - git+https://github.com/BCCDC-PHL/FluViewer.git@v0.1.11-3
