Add support for samplesheet input (#15)
* add support for samplesheet input

* Remove unused keep_interfiles param

--- a/nextflow.config
+++ b/nextflow.config
@@ -12,6 +12,7 @@ params {
     cache = ''
     outdir = 'results'
     fastq_input = 'NO_FILE'
+    samplesheet_input = 'NO_FILE'
     illumina_suffixes = ['*_R{1,2}_001', '*_R{1,2}', '*_{1,2}' ]
     fastq_exts = ['.fastq.gz', '.fq.gz', '.fastq', '.fq']
     fastq_search_path = makeFastqSearchPath( illumina_suffixes, fastq_exts )
@@ -21,11 +22,10 @@ params {
     pipeline_short_name = parsePipelineName(manifest.toMap().get('name'))
     pipeline_minor_version = parseMinorVersion(manifest.toMap().get('version'))
     run_name = parseRunName( fastq_input )
-    min_depth = '10'
-    min_q = '30'
-    min_cov = '25'
-    min_ident = '95'
-    keep_interfiles = false
+    min_depth = 10
+    min_q = 30
+    min_cov = 25
+    min_ident = 95
     h1_dataset = ''
     h3_dataset = ''
     h5_dataset = ''
