Add separate read normalization step (#23)
* Add separate read normalization step

* restore errorStrategy

* set memory for GitHub Actions environment

* whitespace

* Switch max memory to 8GB when running in GitHub Actions

* Update README.md

---------

Co-authored-by: John Palmer <32370730+jpalmer37@users.noreply.github.com>

--- a/nextflow.config
+++ b/nextflow.config
@@ -22,6 +22,7 @@ params {
     pipeline_short_name = parsePipelineName(manifest.toMap().get('name'))
     pipeline_minor_version = parseMinorVersion(manifest.toMap().get('version'))
     run_name = parseRunName( fastq_input )
+    target_depth = 200
     min_depth = 10
     min_q = 30
     min_cov = 25
@@ -78,6 +79,11 @@ profiles {
 }
 
 process {
+    withName: normalize_depth {
+	conda = "$baseDir/environments/fluviewer.yml"
+	memory = '50 GB'
+    }
+
     withName: fluviewer {
 	conda = "$baseDir/environments/fluviewer.yml"
 	cpus = 8
