Fix clade calling (#25)
* Work towards fixing clade_calling process

* Fix for H1 and H3

* work on clade calling process

* Fix if/else syntax

* Remove determin_ha_type process (not needed with current approach)

--- a/nextflow.config
+++ b/nextflow.config
@@ -27,9 +27,9 @@ params {
     min_q = 30
     min_cov = 25
     min_ident = 95
-    h1_dataset = ''
-    h3_dataset = ''
-    h5_dataset = ''
+    h1_dataset = 'NO_FILE'
+    h3_dataset = 'NO_FILE'
+    h5_dataset = 'NO_FILE'
     db = 'NO_FILE'
     blastx_subtype_db = "${projectDir}/assets/blastx/blastx_subtype_db.fasta"
     genoflu_cache = "${projectDir}/assets/genoflu"
